--- a/gezamenlijk/amstel.html
+++ b/gezamenlijk/amstel.html
@@ -4,8 +4,376 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amstelcampus</title>
+  <link rel="stylesheet" href="styles/amstel.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
 </head>
 <body>
+
+  <header>
+    <H1>Amstelcampus</H1>
+</header>
+
+<main class="middle">
+
+
+    <p>Op de Amstelcampus bestaat uit 8 locaties.
+        Daarnaast zijn er pleinen en hoven.
+        Op de locaties zijn cafés, restaurants, koffiecorners,
+        bibliotheken, sporthal, gymzaal,
+        debat- en activiteitencentrum en plakken waar je kan studeren. </p>
+
+    <h2>Locaties</h2>
+
+    <section>
+    <h3>Jakoba Mulderhuis</h3>
+    </section>
+
+    <section class= "info">
+    <img src="../assets/Powerhouse-Company-Jakoba-Mulderhuis-Photography-by-Sebastian-van-Damme-05-scaled.jpg"
+        alt="Jakoba Mulderhuis">
+
+    <table>
+        <tr>
+            <th></th>
+            <th scope="col">Reguliere openingstijden </th>
+        </tr>
+        <tr>
+            <th scope="col">Ma-Di</th>
+            <td>7.30 - 22.30</td>
+        </tr>
+        <tr>
+            <th scope="col">Woe-Do</th>
+            <td>7.30 - 21.00</td>
+        </tr>
+        <tr>
+            <th scope="col">Vr</th>
+            <td>7.30 - 19.00</td>
+        </tr>
+        <tr>
+            <th scope="col">Za-Zo</th>
+            <td>Gesloten</td>
+        </tr>
+    </table>
+</section>
+
+<section>
+    <p>Ir. Jakoba Helena (Ko) Mulder (1900-1988) was architect en
+        behoorde tot de meest invloedrijke Amsterdamse stedenbouwers van de vorige eeuw.
+        Van 1930 tot 1965 werkte ze als één van de weinige vrouwen bij de
+        Dienst der Publieke Werken van de gemeente Amsterdam.
+        Zij heeft onmiskenbaar haar stempel gedrukt op de ruimtelijke ontwikkeling
+        van Amsterdam en daarmee op de woon- en leefkwaliteit van de stad vandaag de dag.
+        Sprekende voorbeelden zijn haar ontwerpen van het Amsterdamse Bos en de tuinsteden
+        in West en Zuid, maar ook de introductie van het concept hovenbouw en
+        haar grote aandeel in de aanleg van talloze nieuwe openbare speelplaatsen.</p>
+</section>
+
+<section>
+    <h3>Benno Premselahuis</h3>
+</section>
+
+<section class= "info">
+    <img src="../assets/benno-premselahuis-bph.jpg" alt="Benno Premselahuis">
+
+    <table>
+        <tr>
+            <th></th>
+            <th scope="col">Reguliere openingstijden </th>
+        </tr>
+        <tr>
+            <th scope="col">Ma-Do</th>
+            <td>7.30 - 19.30</td>
+        </tr>
+        <tr>
+            <th scope="col">Vr</th>
+            <td>7.30 - 18.00</td>
+        </tr>
+        <tr>
+            <th scope="col">Za-Zo</th>
+            <td>Gesloten</td>
+        </tr>
+    </table>
+</section>
+
+<section>
+    <p>Benno Premsela (1920-1997) was een Amsterdamse vormgever en binnenhuisarchitect.
+        Hij speelde een belangrijke rol in de Nederlandse kunstwereld
+        van na de oorlog, en was een voorvechter van de homo-emancipatie. </p>
+    </section>
+
+    <section>
+    <h3>Muller-Lulofshuis</h3>
+</section>
+
+    <section class= "info">
+    <img src="../assets/voortgang-aug.2014_738.jpg" alt="Muller-Lulofshuis">
+
+    <table>
+        <tr>
+            <th></th>
+            <th scope="col">Reguliere openingstijden </th>
+        </tr>
+        <tr>
+            <th scope="col">Ma-Do</th>
+            <td>7.30 - 19.30</td>
+        </tr>
+        <tr>
+            <th scope="col">Vr</th>
+            <td>7.30 - 18.00</td>
+        </tr>
+        <tr>
+            <th scope="col">Za</th>
+            <td>Gesloten</td>
+        </tr>
+        <tr>
+            <th scope="col">Zo</th>
+            <td>9.00 - 18.00</td>
+        </tr>
+
+    </table>
+</section>
+
+    <section>
+    <p>Marie Geertruide Muller-Lulofs (1854-1954)
+        was de oprichtster van de eerste school voor maatschappelijk werk in Nederland,
+        en een bekende spil in de sociaal liberale- en feministische beweging
+        in Nederland. </p>
+    </section>
+
+<section>
+    <h3>Theo Thijssenhuis</h3>
+</section>
+
+<section class= "info">
+    <img src="../assets/theo-thijssenhuis.jpg" alt="theo-thijssenhuis">
+
+    <table>
+        <tr>
+            <th></th>
+            <th scope="col">Reguliere openingstijden </th>
+        </tr>
+        <tr>
+            <th scope="col">Ma-Do</th>
+            <td>7.30 - 22.30</td>
+        </tr>
+        <tr>
+            <th scope="col">Vr</th>
+            <td>7.30 - 18.00</td>
+        </tr>
+        <tr>
+            <th scope="col">Za-Zo</th>
+            <td>Gesloten</td>
+        </tr>
+    </table>
+</section>
+
+    <section>
+    <p>Theodorus Johannes (Do) Thijssen (16 juni 1879 - 23 december 1943)
+        was een Nederlands schrijver, onderwijzer en socialistisch politicus.
+        Zijn bekendste boek is Kees de jongen (1923), dat in de
+        Amsterdamse Jordaan speelt. </p>
+    </section>
+
+<section>
+    <h3>Wibauthuis</h3>
+</section>
+
+    <section class= "info">
+    <img src="../assets/voortgang-aug.2014_732.jpg" alt="Wibauthuis">
+
+    <table>
+        <tr>
+            <th></th>
+            <th scope="col">Reguliere openingstijden </th>
+        </tr>
+        <tr>
+            <th scope="col">Ma-Do</th>
+            <td>7.30 - 22.30</td>
+        </tr>
+        <tr>
+            <th scope="col">Vr</th>
+            <td>7.30 - 20.00</td>
+        </tr>
+        <tr>
+            <th scope="col">Za</th>
+            <td>8.30 - 17.30</td>
+        </tr>
+        <tr>
+            <th scope="col">Zo</th>
+            <td>Gesloten</td>
+        </tr>
+
+    </table>
+</section>
+
+    <section>
+    <p>Floor Wibaut (1859-1936) was een Amsterdamse wethouder
+        met grote impact op de stedelijke ontwikkeling en verbetering van de sociale omstandigheden.
+        Hij werd ook wel de 'onderkoning' van Amsterdam genoemd.
+        Zijn standbeeld staat vlakbij het Wibauthuis op de
+        brug over de Singelgracht. </p>
+    </section>
+
+    <section>
+    <h3>Kohnstammhuis</h3>
+<section>
+
+  <section class= "info">
+    <img src="../assets/kohnstammhuis.jpg" alt="kohnstammhuis">
+
+    <table>
+        <tr>
+            <th></th>
+            <th scope="col">Reguliere openingstijden </th>
+        </tr>
+        <tr>
+            <th scope="col">Ma-Do</th>
+            <td>7.30 - 22.30</td>
+        </tr>
+        <tr>
+            <th scope="col">Vr</th>
+            <td>7.30 - 18.00</td>
+        </tr>
+        <tr>
+            <th scope="col">Za-Zo</th>
+            <td>Gesloten</td>
+        </tr>
+    </table>
+</section>
+
+<section>
+    <p>Philip Kohnstamm is een Nederlands natuurkundige,
+        filosoof en pedagoog, en is bekend geworden als
+        grondlegger van de wetenschappelijke pedagogiek
+        en didactiek in Nederland. Daarnaast wordt hij ook gezien als
+        grondlegger van de empirische onderwijskunde,
+        als continue verbetermethode voor onderwijs
+        en opvoeding.</p>
+    </section>
+
+    <h2>Bibliotheken</h2>
+
+    <p>Op de campus zijn er 3 bibliotheken.
+        In het Kohnstammhuis, Wibautstraat en Koetsier-Montaignehuis.
+<br  />
+        Je kan daar boeken en tijdschriften lenen.
+        Ook heb je toegang tot e-books, e-journals en webcolleges.
+        Het is voor alle studenten en werknemers gratis.Ik de bibliotheek zijn verschillende studieplekken,
+        projectruimtes waar je kan samenwerken en speciale stiltewerkplekken.
+        Je kan daar werken met je eigen laptop of met een HvA-pc.
+    </p>
+
+
+    <h3>Kohnstammhuis </h3>
+
+    <img src="../assets/hva0010623.jpg" alt="bibliotheek kohnstammhuis">
+
+    <p>Er is een groot aanbod op verschillende soorten boeken. <br  />
+        367 studieplekken en 20 studieplekken met pc in de stilteruimte. <br  />
+        De bibliotheek van het kohnstammhuis op de 1e verdieping is te bereiken 
+        door een loopbrug vanuit de Jakoba Mulderhuis op de 5e verdieping.
+
+        In het Jakoba Mulderhuis 67 studieplekken
+        Op de begane grond zijn er 45 studieplekken beschikbaar en de
+        op 7e verdieping zijn nog 22 stilteplekken beschikbaar.
+    </p>
+
+<h3>Wibauthuis</h3> 
+
+<img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt="bibliotheek Wibauthuis"> 
+
+<p>500 studieplekken en 
+3 studieplekken met pc. <br  />
+
+Er zijn verschillende soorten studieplekken aan leestafels, werkplekken met wifi en samenwerkplekken. Er is ook een stilteruimte die is op de tweede verdieping. 
+
+Als je wilt samenwerken is er op de 1e en 2e verdieping een projectruimte waar je samen kan werken. 
+Als je deze ruimte graag wilt gebruiken kan je die online reserveren.
+</p>
+
+<h3>Koetsier-Montaignehuis</h3>
+
+<img src="../assets/amfi.jpg" alt="bibliotheek Koetsier-Montaignehuis">
+
+<p>90 studieplekken en 1 studieplek met pc. 
+    <br  />
+    
+    Collectie 
+    bestaat uit alle aspecten van het vakgebied mode, kleding en textiel in theorie en praktijk. 
+    </p>
+
+    <h2>Restaurants, Cafés en Koffiecorners </h2>
+
+    <h3>Restaurants</h3>
+
+    <p>Er zijn verschillende restaurants op de campus. Je kunt hier terecht voor ontbijt, middag- of avondeten en diverse snacks en dranken. </p>
+
+    <table>
+        <tr>
+            <th scope="col">Locatie </th>
+            <th scope="col">Waar </th>
+        </tr>
+        <tr>
+            <td>Theo Thijssenhuis</td>
+            <td>Begane grond</td>
+        </tr>
+        <tr>
+            <td>Wibauthuis</td>
+            <td>Begane grond, rechtdoor vanaf entree, <br  /> of bereikbaar vanaf het Wibauthof</td>
+        </tr>
+        <tr>
+            <td>Leeuwenburg</td>
+            <td>Begane grond, rechts vanaf de entree</td>
+        </tr>
+    </table>
+
+    <br  />
+
+<h3>Cafés</h3>
+
+<h4>Café Fest</h4>
+
+<p>Op het Wibauthof 1 ligt Café Fest. Ze hebben een menukaart die is ingericht voor zowel voor de ochtend, de middag en voor de avond. Je kan er ook gebruik maken van gratis WiFi, maar je kan ook een beamerscherm reserveren. Het café biedt daarnaast ook verschillende activiteiten.</p>
+
+
+<h4>Amstelcampus Café </h4>
+
+<p>Op de Tweede Boerhaavestraat 10 ligt het Amstelcampus Café. Je kan daar verschillende eet- en drinkgelegenheden halen bijvoorbeeld een energiedrankje, koffie, soep of een broodje.
+Je hebt vanuit het café een doorkijk naar het sportcomplex van het USC. Dit café beschikt ook over een beamer en vergaderfaciliteiten. Daarnaast is een ruimte te huur voor activiteiten. 
+</p>
+
+<h3>Koffiecorners</h3>
+
+<p>Bij de koffiecorners worden diverse soorten koffie, thee en koude dranken geserveerd. Ook voor broodjes of zoete lekkernijen kun je hier terecht.</p>
+
+<table>
+<tr>
+    <th scope="col">Locatie </th>
+    <th scope="col">Waar </th>
+</tr>
+<tr>
+    <td>Benno Premselahuis</td>
+    <td>Begane grond, links van de entree</td>
+</tr>
+<tr>
+    <td>Wibauthuis</td>
+    <td>Begane grond, links van de entree</td>
+</tr>
+<tr>
+    <td>Leeuwenburg</td>
+    <td>1e etage, vanuit de entreehal rechts naast de trap</td>
+</tr>
+<tr>
+    <td>Kohnstammhuis</td>
+    <td>Begane grond, in centrale hal</td>
+</tr>
+
+</table>
+
+
+</main> 
   
 </body>
 </html>f
