--- a/gezamenlijk/amstel.html
+++ b/gezamenlijk/amstel.html
@@ -16,8 +16,9 @@
   <header>
     <div>
       <a href="index.html"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M8.42259 7.52194C8.71085 7.22448 8.70339 6.74967 8.40594 6.46141C8.10848 6.17315 7.63367 6.18061 7.34541 6.47806L8.42259 7.52194ZM4.46141 9.45406C4.17315 9.75152 4.18061 10.2263 4.47806 10.5146C4.77552 10.8028 5.25033 10.7954 5.53859 10.4979L4.46141 9.45406ZM5.52244 9.43789C5.22525 9.14936 4.75042 9.15638 4.46189 9.45356C4.17336 9.75075 4.18038 10.2256 4.47756 10.5141L5.52244 9.43789ZM7.36156 13.3141C7.65875 13.6026 8.13358 13.5956 8.42211 13.2984C8.71064 13.0012 8.70362 12.5264 8.40644 12.2379L7.36156 13.3141ZM5 9.226C4.58579 9.226 4.25 9.56179 4.25 9.976C4.25 10.3902 4.58579 10.726 5 10.726V9.226ZM15.62 9.976L15.6347 9.22614C15.6298 9.22605 15.6249 9.226 15.62 9.226V9.976ZM19 13.488L18.2501 13.4739C18.25 13.4833 18.25 13.4927 18.2501 13.5021L19 13.488ZM15.62 17V17.75C15.6249 17.75 15.6298 17.75 15.6347 17.7499L15.62 17ZM5 16.25C4.58579 16.25 4.25 16.5858 4.25 17C4.25 17.4142 4.58579 17.75 5 17.75V16.25ZM7.34541 6.47806L4.46141 9.45406L5.53859 10.4979L8.42259 7.52194L7.34541 6.47806ZM4.47756 10.5141L7.36156 13.3141L8.40644 12.2379L5.52244 9.43789L4.47756 10.5141ZM5 10.726H15.62V9.226H5V10.726ZM15.6053 10.7259C17.0943 10.755 18.2781 11.985 18.2501 13.4739L19.7499 13.5021C19.7933 11.1853 17.9514 9.27143 15.6347 9.22614L15.6053 10.7259ZM18.2501 13.5021C18.2781 14.991 17.0943 16.221 15.6053 16.2501L15.6347 17.7499C17.9514 17.7046 19.7933 15.7907 19.7499 13.4739L18.2501 13.5021ZM15.62 16.25H5V17.75H15.62V16.25Z"/>
-      </svg></a>
+          <path
+            d="M8.42259 7.52194C8.71085 7.22448 8.70339 6.74967 8.40594 6.46141C8.10848 6.17315 7.63367 6.18061 7.34541 6.47806L8.42259 7.52194ZM4.46141 9.45406C4.17315 9.75152 4.18061 10.2263 4.47806 10.5146C4.77552 10.8028 5.25033 10.7954 5.53859 10.4979L4.46141 9.45406ZM5.52244 9.43789C5.22525 9.14936 4.75042 9.15638 4.46189 9.45356C4.17336 9.75075 4.18038 10.2256 4.47756 10.5141L5.52244 9.43789ZM7.36156 13.3141C7.65875 13.6026 8.13358 13.5956 8.42211 13.2984C8.71064 13.0012 8.70362 12.5264 8.40644 12.2379L7.36156 13.3141ZM5 9.226C4.58579 9.226 4.25 9.56179 4.25 9.976C4.25 10.3902 4.58579 10.726 5 10.726V9.226ZM15.62 9.976L15.6347 9.22614C15.6298 9.22605 15.6249 9.226 15.62 9.226V9.976ZM19 13.488L18.2501 13.4739C18.25 13.4833 18.25 13.4927 18.2501 13.5021L19 13.488ZM15.62 17V17.75C15.6249 17.75 15.6298 17.75 15.6347 17.7499L15.62 17ZM5 16.25C4.58579 16.25 4.25 16.5858 4.25 17C4.25 17.4142 4.58579 17.75 5 17.75V16.25ZM7.34541 6.47806L4.46141 9.45406L5.53859 10.4979L8.42259 7.52194L7.34541 6.47806ZM4.47756 10.5141L7.36156 13.3141L8.40644 12.2379L5.52244 9.43789L4.47756 10.5141ZM5 10.726H15.62V9.226H5V10.726ZM15.6053 10.7259C17.0943 10.755 18.2781 11.985 18.2501 13.4739L19.7499 13.5021C19.7933 11.1853 17.9514 9.27143 15.6347 9.22614L15.6053 10.7259ZM18.2501 13.5021C18.2781 14.991 17.0943 16.221 15.6053 16.2501L15.6347 17.7499C17.9514 17.7046 19.7933 15.7907 19.7499 13.4739L18.2501 13.5021ZM15.62 16.25H5V17.75H15.62V16.25Z" />
+        </svg></a>
     </div>
 
     <H1>Amstelcampus</H1>
@@ -269,133 +270,135 @@
       Je kan daar werken met je eigen laptop of met een HvA-pc.
     </p>
 
-<section>
-    <h3>Kohnstammhuis </h3>
+    <section>
+      <h3>Kohnstammhuis </h3>
 
-    <img src="../assets/hva0010623.jpg" alt="bibliotheek kohnstammhuis">
+      <img src="../assets/hva0010623.jpg" alt="bibliotheek kohnstammhuis">
 
-    <p>Er is een groot aanbod op verschillende soorten boeken. <br />
-      367 studieplekken en 20 studieplekken met pc in de stilteruimte. <br />
-      De bibliotheek van het kohnstammhuis op de 1e verdieping is te bereiken
-      door een loopbrug vanuit de Jakoba Mulderhuis op de 5e verdieping.
+      <p>Er is een groot aanbod op verschillende soorten boeken. <br />
+        367 studieplekken en 20 studieplekken met pc in de stilteruimte. <br />
+        De bibliotheek van het kohnstammhuis op de 1e verdieping is te bereiken
+        door een loopbrug vanuit de Jakoba Mulderhuis op de 5e verdieping.
 
-      In het Jakoba Mulderhuis 67 studieplekken
-      Op de begane grond zijn er 45 studieplekken beschikbaar en de
-      op 7e verdieping zijn nog 22 stilteplekken beschikbaar.
-    </p>
-</section>
+        In het Jakoba Mulderhuis 67 studieplekken
+        Op de begane grond zijn er 45 studieplekken beschikbaar en de
+        op 7e verdieping zijn nog 22 stilteplekken beschikbaar.
+      </p>
+    </section>
 
-<section>
-    <h3>Wibauthuis</h3>
+    <section>
+      <h3>Wibauthuis</h3>
 
-    <img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt="bibliotheek Wibauthuis">
+      <img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt="bibliotheek Wibauthuis">
 
-    <p>500 studieplekken en
-      3 studieplekken met pc. <br />
+      <p>500 studieplekken en
+        3 studieplekken met pc. <br />
 
-      Er zijn verschillende soorten studieplekken aan leestafels, werkplekken met wifi en samenwerkplekken.
-      Er is ook een stilteruimte die is op de tweede verdieping.
+        Er zijn verschillende soorten studieplekken aan leestafels, werkplekken met wifi en samenwerkplekken.
+        Er is ook een stilteruimte die is op de tweede verdieping.
 
-      Als je wilt samenwerken is er op de 1e en 2e verdieping een projectruimte waar je samen kan werken.
-      Als je deze ruimte graag wilt gebruiken kan je die online reserveren.
-    </p>
-  </section>
+        Als je wilt samenwerken is er op de 1e en 2e verdieping een projectruimte waar je samen kan werken.
+        Als je deze ruimte graag wilt gebruiken kan je die online reserveren.
+      </p>
+    </section>
 
-  <section>
-    <h3>Koetsier-Montaignehuis</h3>
+    <section>
+      <h3>Koetsier-Montaignehuis</h3>
 
-    <img src="../assets/amfi.jpg" alt="bibliotheek Koetsier-Montaignehuis">
+      <img src="../assets/amfi.jpg" alt="bibliotheek Koetsier-Montaignehuis">
 
-    <p>90 studieplekken en 1 studieplek met pc.
-      <br />
+      <p>90 studieplekken en 1 studieplek met pc.
+        <br />
 
-      Collectie
-      bestaat uit alle aspecten van het vakgebied mode, kleding en textiel in theorie en praktijk.
-    </p>
-  </section>
+        Collectie
+        bestaat uit alle aspecten van het vakgebied mode, kleding en textiel in theorie en praktijk.
+      </p>
+    </section>
 
     <h2>Restaurants, Cafés en Koffiecorners </h2>
 
-    <p class="inleiding">Als je wat eten of drinken wil kan je op verschillende plekken terecht. Er zijn op de campus restaurants, cafés en koffiecorners. Je kan daar maaltijden halen voor elk uur van de dag of gewoon een snacks voor tussendoor.  </p>
+    <p class="inleiding">Als je wat eten of drinken wil kan je op verschillende plekken terecht. Er zijn op de campus
+      restaurants, cafés en koffiecorners. Je kan daar maaltijden halen voor elk uur van de dag of gewoon een snacks
+      voor tussendoor. </p>
 
 
     <section>
-    <h3>Restaurants</h3>
+      <h3>Restaurants</h3>
 
-    <p>Er zijn verschillende restaurants op de campus. Je kunt hier terecht voor ontbijt, middag- of
-      avondeten en diverse snacks en dranken. </p>
+      <p>Er zijn verschillende restaurants op de campus. Je kunt hier terecht voor ontbijt, middag- of
+        avondeten en diverse snacks en dranken. </p>
 
-    <table>
-      <tr>
-        <th scope="col">Locatie </th>
-        <th scope="col">Waar </th>
-      </tr>
-      <tr>
-        <td>Theo Thijssenhuis</td>
-        <td>Begane grond</td>
-      </tr>
-      <tr>
-        <td>Wibauthuis</td>
-        <td>Begane grond, rechtdoor vanaf entree, <br /> of bereikbaar vanaf het Wibauthof</td>
-      </tr>
-      <tr>
-        <td>Leeuwenburg</td>
-        <td>Begane grond, rechts vanaf de entree</td>
-      </tr>
-    </table>
-  </section>
+      <table>
+        <tr>
+          <th scope="col">Locatie </th>
+          <th scope="col">Waar </th>
+        </tr>
+        <tr>
+          <td>Theo Thijssenhuis</td>
+          <td>Begane grond</td>
+        </tr>
+        <tr>
+          <td>Wibauthuis</td>
+          <td>Begane grond, rechtdoor vanaf entree, <br /> of bereikbaar vanaf het Wibauthof</td>
+        </tr>
+        <tr>
+          <td>Leeuwenburg</td>
+          <td>Begane grond, rechts vanaf de entree</td>
+        </tr>
+      </table>
+    </section>
 
     <br />
 
     <section>
-    <h3>Cafés</h3>
+      <h3>Cafés</h3>
 
-    <h4>Café Fest</h4>
+      <h4>Café Fest</h4>
 
-    <p>Op het Wibauthof 1 ligt Café Fest. Ze hebben een menukaart die is ingericht voor zowel voor de
-      ochtend, de middag en voor de avond. Je kan er ook gebruik maken van gratis WiFi, maar je kan ook een
-      beamerscherm reserveren. Het café biedt daarnaast ook verschillende activiteiten.</p>
+      <p>Op het Wibauthof 1 ligt Café Fest. Ze hebben een menukaart die is ingericht voor zowel voor de
+        ochtend, de middag en voor de avond. Je kan er ook gebruik maken van gratis WiFi, maar je kan ook een
+        beamerscherm reserveren. Het café biedt daarnaast ook verschillende activiteiten.</p>
 
 
-    <h4>Amstelcampus Café </h4>
+      <h4>Amstelcampus Café </h4>
 
-    <p>Op de Tweede Boerhaavestraat 10 ligt het Amstelcampus Café. Je kan daar verschillende eet- en
-      drinkgelegenheden halen bijvoorbeeld een energiedrankje, koffie, soep of een broodje.
-      Je hebt vanuit het café een doorkijk naar het sportcomplex van het USC. Dit café beschikt ook over een
-      beamer en vergaderfaciliteiten. Daarnaast is een ruimte te huur voor activiteiten.
-    </p>
-  </section>
+      <p>Op de Tweede Boerhaavestraat 10 ligt het Amstelcampus Café. Je kan daar verschillende eet- en
+        drinkgelegenheden halen bijvoorbeeld een energiedrankje, koffie, soep of een broodje.
+        Je hebt vanuit het café een doorkijk naar het sportcomplex van het USC. Dit café beschikt ook over een
+        beamer en vergaderfaciliteiten. Daarnaast is een ruimte te huur voor activiteiten.
+      </p>
+    </section>
 
-  <section>
-    <h3>Koffiecorners</h3>
+    <section>
+      <h3>Koffiecorners</h3>
 
-    <p>Bij de koffiecorners worden diverse soorten koffie, thee en koude dranken geserveerd. Ook voor
-      broodjes of zoete lekkernijen kun je hier terecht.</p>
+      <p>Bij de koffiecorners worden diverse soorten koffie, thee en koude dranken geserveerd. Ook voor
+        broodjes of zoete lekkernijen kun je hier terecht.</p>
 
-    <table>
-      <tr>
-        <th scope="col">Locatie </th>
-        <th scope="col">Waar </th>
-      </tr>
-      <tr>
-        <td>Benno Premselahuis</td>
-        <td>Begane grond, links van de entree</td>
-      </tr>
-      <tr>
-        <td>Wibauthuis</td>
-        <td>Begane grond, links van de entree</td>
-      </tr>
-      <tr>
-        <td>Leeuwenburg</td>
-        <td>1e etage, vanuit de entreehal rechts naast de trap</td>
-      </tr>
-      <tr>
-        <td>Kohnstammhuis</td>
-        <td>Begane grond, in centrale hal</td>
-      </tr>
+      <table>
+        <tr>
+          <th scope="col">Locatie </th>
+          <th scope="col">Waar </th>
+        </tr>
+        <tr>
+          <td>Benno Premselahuis</td>
+          <td>Begane grond, links van de entree</td>
+        </tr>
+        <tr>
+          <td>Wibauthuis</td>
+          <td>Begane grond, links van de entree</td>
+        </tr>
+        <tr>
+          <td>Leeuwenburg</td>
+          <td>1e etage, vanuit de entreehal rechts naast de trap</td>
+        </tr>
+        <tr>
+          <td>Kohnstammhuis</td>
+          <td>Begane grond, in centrale hal</td>
+        </tr>
 
-    </table>
-  </section>
+      </table>
+    </section>
 
   </main>
 
