Responsiveness aangepast; overbodige code verwijderd

--- a/athene/index.html
+++ b/athene/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <h1>1G</h1>
-        <a href="/amstel"><h2>Amstel Campus</h2></a>
+        <a href="/amstel"><h4>Amstel Campus</h4></a>
     </header>
 
-    <Section class="Scroller1">
+    <Section class="Scroller1 left">
         <div class="marquee">
         <article>
             <figure>
@@ -62,106 +62,7 @@
             <figcaption>Dylan van Nierop</figcaption>
             </figure>
         </article>
-    </div>
-        <div class="marquee">
-        <article>
-            <figure>
-            <a href="https://ambersr.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Amber.JPG" alt="Een foto van Amber"></a>
-            <figcaption>Amber Schalker</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://nyathene.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Athene.JPG" alt="Een foto van Athene"></a>
-            <figcaption>Athene Guanipa</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://brancovanbeek.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Branco.JPG" alt="Een foto van Branco"></a>
-            <figcaption>Branco van Beek</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://cedrikstephen.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Cedrik.JPG" alt="Een foto van Cedrik"></a>
-            <figcaption>Cedrik Wouters</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://osaoni.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Christian.JPG" alt="Een foto van Christian"></a>
-            <figcaption>Christian Osa-Oni</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://clarice-cod.github.io/visitekaartje-clarice/"><img src="../assets/Squad1G-Clarice.JPG" alt="Een foto van Clarice"></a>
-            <figcaption>Clarice Boerlijst</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://github.com/ColindeGroot"><img src="../assets/Squad1G-Colin.JPG" alt="Een foto van Colin"></a>
-            <figcaption>Colin de Groot</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://divaninl.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Dylan.JPG" alt="Een foto van Dylan"></a>
-            <figcaption>Dylan van Nierop</figcaption>
-            </figure>
-        </article>
-    </div><div class="marquee"></div>
-        <article>
-            <figure>
-            <a href="https://ambersr.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Amber.JPG" alt="Een foto van Amber"></a>
-            <figcaption>Amber Schalker</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://nyathene.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Athene.JPG" alt="Een foto van Athene"></a>
-            <figcaption>Athene Guanipa</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://brancovanbeek.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Branco.JPG" alt="Een foto van Branco"></a>
-            <figcaption>Branco van Beek</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://cedrikstephen.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Cedrik.JPG" alt="Een foto van Cedrik"></a>
-            <figcaption>Cedrik Wouters</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://osaoni.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Christian.JPG" alt="Een foto van Christian"></a>
-            <figcaption>Christian Osa-Oni</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://clarice-cod.github.io/visitekaartje-clarice/"><img src="../assets/Squad1G-Clarice.JPG" alt="Een foto van Clarice"></a>
-            <figcaption>Clarice Boerlijst</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://github.com/ColindeGroot"><img src="../assets/Squad1G-Colin.JPG" alt="Een foto van Colin"></a>
-            <figcaption>Colin de Groot</figcaption>
-            </figure>
-        </article>
-        <article>
-            <figure>
-            <a href="https://divaninl.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Dylan.JPG" alt="Een foto van Dylan"></a>
-            <figcaption>Dylan van Nierop</figcaption>
-            </figure>
-        </article>
-    </div><div class="marquee">
+    </div><div class="marquee duplicate">
         <article>
             <figure>
             <a href="https://ambersr.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Amber.JPG" alt="Een foto van Amber"></a>
@@ -213,7 +114,7 @@
     </div>
     </Section>
 
-    <Section class="Scroller2">
+    <Section class="Scroller2 right">
         <div class="marquee2">
 
             <article>
@@ -264,7 +165,7 @@
                 <figcaption>Jules Bruins</figcaption>
                 </figure>
             </article>
-        </div><div class="marquee2"></div>
+        </div><div class="marquee2 duplicate">
 
             <article>
                 <figure>
@@ -316,7 +217,7 @@
             </article>
         </div>
     </Section>
-    <Section class="Scroller3">
+    <Section class="Scroller3 left">
         <div class="marquee">
         <article>
             <figure>
@@ -360,7 +261,7 @@
             <figcaption>Nadia Visser</figcaption>
             </figure>
         </article>
-    </div><div class="marquee">
+    </div><div class="marquee duplicate">
         <article>
             <figure>
             <a href="https://julia-stevens.github.io/your-tribe-profile-card/"><img src="../assets/Squad1G-Julia.JPG" alt="Een foto van Julia"></a>
@@ -405,7 +306,7 @@
         </article>
     </div>
     </Section>
-    <Section class="Scroller4">
+    <Section class="Scroller4 right">
         <div class="marquee2">
 
             <article>
@@ -456,7 +357,7 @@
                 <figcaption>Viresh Sheoratan</figcaption>
                 </figure>
             </article>    
-        </div><div class="marquee2"></div>
+        </div><div class="marquee2 duplicate">
 
             <article>
                 <figure>
