add anchor tags

--- a/gezamenlijk/amstel.html
+++ b/gezamenlijk/amstel.html
@@ -34,7 +34,7 @@
 
     <h2>Locaties</h2>
 
-    <section>
+    <section id="jakoba">
       <h3>Jakoba Mulderhuis</h3>
 
 
@@ -77,7 +77,7 @@
         haar grote aandeel in de aanleg van talloze nieuwe openbare speelplaatsen.</p>
     </section>
 
-    <section>
+    <section id="benno-premsela">
       <h3>Benno Premselahuis</h3>
 
 
@@ -109,7 +109,7 @@
         van na de oorlog, en was een voorvechter van de homo-emancipatie. </p>
     </section>
 
-    <section>
+    <section id="muller-lulofs">
       <h3>Muller-Lulofshuis</h3>
 
 
@@ -147,7 +147,7 @@
         in Nederland. </p>
     </section>
 
-    <section>
+    <section id="theo">
       <h3>Theo Thijssenhuis</h3>
 
 
@@ -181,7 +181,7 @@
         Amsterdamse Jordaan speelt. </p>
     </section>
 
-    <section>
+    <section id="wibaut">
       <h3>Wibauthuis</h3>
 
 
@@ -221,7 +221,7 @@
         brug over de Singelgracht. </p>
     </section>
 
-    <section>
+    <section id="kohnstamm">
       <h3>Kohnstammhuis</h3>
 
 
@@ -270,7 +270,7 @@
       Je kan daar werken met je eigen laptop of met een HvA-pc.
     </p>
 
-    <section>
+    <section id="kohnstamm-bieb">
       <h3>Kohnstammhuis </h3>
 
       <img src="../assets/hva0010623.jpg" alt="bibliotheek kohnstammhuis">
@@ -286,7 +286,7 @@
       </p>
     </section>
 
-    <section>
+    <section id="wibaut-bieb">
       <h3>Wibauthuis</h3>
 
       <img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt="bibliotheek Wibauthuis">
@@ -302,7 +302,7 @@
       </p>
     </section>
 
-    <section>
+    <section id="koetsier-bieb">
       <h3>Koetsier-Montaignehuis</h3>
 
       <img src="../assets/amfi.jpg" alt="bibliotheek Koetsier-Montaignehuis">
