Add missing links and Alt Text
De links die het niet deden, doen het nu.
De bovenste figuren hebben nu alt tekst voor screenreaders

--- a/gezamenlijk/index.html
+++ b/gezamenlijk/index.html
@@ -59,52 +59,52 @@
                 <div class="filler3 top"></div>
                 <div class="filler2 bottom"></div>
                 <figure>
-                    <a href=""><img src="../assets/jakoba.jpg" alt=""></a>
+                    <a href="amstel.html#jakoba"><img src="../assets/jakoba.jpg" alt="Jakoba Mulder"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="amstel.html#theo"><img src="../assets/theo.jpg" alt=""></a>
+                    <a href="amstel.html#theo"><img src="../assets/theo.jpg" alt="Theo Thijssen"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="amstel.html#kohnstamm"><img src="../assets/kohnstamm.jpg" alt=""></a>
+                    <a href="amstel.html#kohnstamm"><img src="../assets/kohnstamm.jpg" alt="Philip kohnstamm"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="amstel.html#wibaut"><img src="../assets/wibaut.jpg" alt=""></a>
+                    <a href="amstel.html#wibaut"><img src="../assets/wibaut.jpg" alt="Floor Wibaut"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="amstel.html#benno-premsela"><img src="../assets/benno-premsela.jpg" alt=""></a>
+                    <a href="amstel.html#benno-premsela"><img src="../assets/benno-premsela.jpg" alt="Benno Premsela"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href="amstel.html#muller-lulofs"><img src="../assets/Marie_Muller_Lulofs1.jpg" alt=""></a>
+                    <a href="amstel.html#muller-lulofs"><img src="../assets/Marie_Muller_Lulofs1.jpg" alt="Marie Muller-Lulofs"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href=""><img src="../assets/hva0010623.jpg" alt=""></a>
+                    <a href="amstel.html#kohnstamm-bieb"><img src="../assets/hva0010623.jpg" alt="Bibliotheek Kohnstammhuis"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href=""><img src="../assets/amfi.jpg" alt=""></a>
+                    <a href="amstel.html#koetsier-bieb"><img src="../assets/amfi.jpg" alt="Koetsier-Montaignehuis"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href=""><img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt=""></a>
+                    <a href="amstel.html#wibaut-bieb"><img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt="Bibliotheek Wibauthuis"></a>
                     <figcaption></figcaption>
                 </figure>
 
                 <figure>
-                    <a href=""><img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt=""></a>
+                    <a href="amstel.html#wibaut-bieb"><img src="../assets/hva-wibauthuis-fotomoniquekooijmans.jpeg" alt="Bibliotheek Wibauthuis"></a>
                     <figcaption></figcaption>
                 </figure>
             </div>
